RESOLVED FIXED212631
UIColor and NSColor WebCore::Color factories should return invalid colors for nil input colors
https://bugs.webkit.org/show_bug.cgi?id=212631
Summary UIColor and NSColor WebCore::Color factories should return invalid colors for...
Tim Horton
Reported 2020-06-02 01:59:14 PDT
UIColor and NSColor WebCore::Color factories should return invalid colors for nil input colors
Attachments
Patch (2.68 KB, patch)
2020-06-02 01:59 PDT, Tim Horton
andersca: review+
Tim Horton
Comment 1 2020-06-02 01:59:36 PDT
Radar WebKit Bug Importer
Comment 2 2020-06-02 01:59:58 PDT
Anders Carlsson
Comment 3 2020-06-02 07:28:14 PDT
Comment on attachment 400798 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=400798&action=review > Source/WebCore/platform/graphics/mac/ColorMac.mm:98 > + return Color(); Can probably just return { } here. > Source/WebCore/platform/graphics/mac/ColorMac.mm:108 > + return Color(); Same. > Source/WebCore/platform/ios/ColorIOS.mm:38 > + return Color(); Same.
Tim Horton
Comment 4 2020-06-02 10:10:37 PDT
True!
Tim Horton
Comment 5 2020-06-02 10:12:03 PDT
Note You need to log in before you can comment on or make changes to this bug.